# NGMS

./: CMakeLists.txt  PRser.cpp  PRserver.cpp  README.md  a.out  k  run.sh  server.m
MAT/: Mser.m  main.m  process_data.m  untitled.mlx
MAT/result/: resul_for_100_km.txt  resul_for_1_km.txt  resul_for_2_km.txt  resul_for_3_km.txt  resul_for_5_km.txt
tests/: client.c  live_capture.c  server  server.c
